--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "18.0.0",
     "react-hook-form": "^7.29.0",
     "react-redux": "^7.2.8",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
